# text-utils

./: .gitignore  Pipfile  README.md  cli.py  cmudict-0.7b7bit6oep.tmp  dependencies.md  dependencies.txt  pytest.ini  setup.cfg  setup.py  utils.py
examples/: examplemap.json  examplesymbols.symb
src/: cli.py
src/tests/: test_accents_dict.py  test_symbols_map.py  test_utils.py
src/text_utils/: ARPAToIPAMapper.py  __init__.py  accent_symbols.py  accent_symbols.tests.py  accents_dict.py  accents_dict.tests.py  chinese_wrapper.py  cli_core.py  cmudict_wrapper.py  epitran_wrapper.py  ipa2symb.py  language.py  speakers_dict.py  str_serialization.py  string_format.py  string_format2.py  symbol_format.py  symbol_id_dict.py  symbols.py  symbols_dict.py  symbols_map.py  symbols_map.tests.py  text.py  types.py  utils.py
src/text_utils_tests/: test_str_serialization.py  test_text.py  test_utils.py
tests/: symbol_id_dict.tests.old.py  test_ARPAToIPAMapper.py  test_accent_symbols.py  test_emails.py  test_ipa2symb.py  test_main.py  test_numbers.py  test_symbol_format.py  test_symbol_id_dict.py  test_symbols_map.py  test_text.py  test_whitespace.py
text_utils/: __init__.py  accents_dict.py  accents_dict.tests.py  cli.py  ipa2symb.py  ipa2symb.tests.py  language.py  model_symbols.py  model_symbols.tests.py  playground.py  playground2.py  playground3.py  print_maps_and_symbols.py  print_or_change_map_and_symbols.py  speakers_dict.py  symbol_id_dict.py  symbol_id_dict.tests.py  symbols.py  symbols_dict.py  symbols_map.py  text.py  text.tests.py  utils.py
(+77 files in other folders)
