[metadata]
name = text_utils
version = 1.0.0
author="Stefan Taubert"
author_email="stefan.taubert@posteo.de"
description="Utils for text processing."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stefantaubert/text-utils.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    epitran
    nltk
    dragonmapper
    ipapy
    inflect
    unidecode

[options.packages.find]
where = src
