[metadata]
name = text_utils
version = 1.0.0
author="Stefan Taubert"
author_email="stefan.taubert@posteo.de"
description="Utils for text processing."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stefantaubert/text-utils.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    epitran
    nltk
    dragonmapper
    inflect
    unidecode
    pronunciation_dict_parser@git+https://github.com/stefantaubert/pronunciation_dict_parser@master
    g2p_en@git+https://github.com/stefantaubert/g2p@master

[options.packages.find]
where = src
